homeworks/kuber-homeworks_1.8/manifests/multi-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-app-service
spec:
  selector:
    app: multi-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
